Обновлен логотип на странице чата
Co-authored-by: bulletmys <bulletmys@yandex.ru>

--- a/client/pages/chat.html
+++ b/client/pages/chat.html
@@ -31,16 +31,8 @@
   <div class="root">
     <div class="header">
       <div class="header-menu">
-        <div class="header-menu__toggle">
-          <div class="burger-icon">
-            <span class="burger-icon__line"></span>
-            <span class="burger-icon__line"></span>
-            <span class="burger-icon__line"></span>
-          </div>
-        </div>
-
         <div class="header-menu__logo">
-          <span>Gist`</span>
+          <img src="img/logo/logo-full-black-blue.jpg" alt="">
         </div>
       </div>
 
