Измены иконки на шрифтовые

--- a/client/pages/chat.html
+++ b/client/pages/chat.html
@@ -69,11 +69,11 @@
 
           <div class="btn-box">
             <a href="#" class="btn-box__icon">
-              <img src="img/icons/attachment.png" alt="Добавить вложение">
+              <i class="far fa-smile"></i>
             </a>
 
             <a href="#" class="btn-box__icon">
-              <img src="img/icons/voice.png" alt="Запись голосового сообщения">
+              <i class="fas fa-plus"></i>
             </a>
           </div>
         </div>
