--- a/client/pages/chat.html
+++ b/client/pages/chat.html
@@ -20,8 +20,7 @@
   <link rel="manifest" href="img/favicon/site.webmanifest">
   <link rel="mask-icon" href="img/favicon/safari-pinned-tab.svg" color="#5bbad5">
 
-  <link rel="image_src" href="" />
-  <!-- TODO -->
+  <link rel="image_src" href="" /> <!-- TODO -->
 
   <link rel="stylesheet" href="css/main.min.css">
 
@@ -62,7 +61,8 @@
 
         <div class="chat__footer">
           <div class="msg-box">
-            <input type="text" class="msg-box__input" placeholder="Введите сообщение...">
+            <input type="text" class="msg-box__input" 
+                   placeholder="Введите сообщение...">
           </div>
 
           <div class="btn-box">
