Минорные изменения клиента

--- a/client/pages/chat.html
+++ b/client/pages/chat.html
@@ -31,8 +31,7 @@
   <div class="root">
     <div class="header">
       <div class="header-menu">
-        <div class="header-menu__logo">
-        </div>
+        <div class="header-menu__logo"></div>
       </div>
 
       <div class="header-settings">
