Добавлена мобильная версия, изменена документация
Co-Authored-By: Nataly Klimova <tataklim@users.noreply.github.com>
Co-authored-by: sk8bored <bakhmetyevgv@gmail.com>

--- a/client/pages/chat.html
+++ b/client/pages/chat.html
@@ -30,6 +30,14 @@
 <body>
   <div class="root">
     <div class="header">
+      <div class="header-menu__toggle">
+          <div class="burger-icon" onclick="showSidebar();">
+            <span class="burger-icon__line"></span>
+            <span class="burger-icon__line"></span>
+            <span class="burger-icon__line"></span>
+          </div>
+        </div>
+
       <div class="header-menu">
         <div class="header-menu__logo"></div>
       </div>
