Подключен поиск по сообщениям в диалогах

--- a/client/pages/chat.html
+++ b/client/pages/chat.html
@@ -50,7 +50,9 @@
     <div class="content">
       <div class="sidebar">
         <div class="sidebar-search">
-          <input type="search" class="sidebar-search__input" placeholder="Поиск">
+          <input type="search" class="sidebar-search__input"
+            oninput="startSearch();"
+            placeholder="Поиск">
         </div>
 
         <ul class="dialogs-list">
